--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group=org.incendo
-version=0.0.1
+group=cloud.commandframework
+version=1.0.0-SNAPSHOT
 description=cloud-spring
 
 org.gradle.caching=true
