--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,8 @@ cloud = "2.0.0-SNAPSHOT"
 springShellBom = "3.1.6"
 
 # Test
-jupiter = "5.10.1"
 truth = "1.1.4"
+awaitility = "4.2.0"
 
 [libraries]
 spotless = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
@@ -29,20 +29,21 @@ gradleKotlinJvm = { group = "org.jetbrains.kotlin.jvm", name = "org.jetbrains.ko
 checkerQual = { group = "org.checkerframework", name = "checker-qual", version.ref = "checkerQual" }
 apiguardian = { group = "org.apiguardian", name = "apiguardian-api", version.ref = "apiguardian" }
 slf4j = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
+awaitility = { group = "org.awaitility", name = "awaitility", version.ref = "awaitility" }
 
 # Spring
 spring-shell = { group = "org.springframework.shell", name = "spring-shell-starter" }
 spring-shell-dependencies = { group = "org.springframework.shell", name = "spring-shell-dependencies", version.ref = "springShellBom" }
 spring-boot-autoconfigure = { group = "org.springframework.boot", name = "spring-boot-autoconfigure" }
 spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test" }
+spring-shell-test = { group = "org.springframework.shell", name = "spring-shell-test" }
+spring-shell-test-autoconfiguration = { group = "org.springframework.shell", name = "spring-shell-test-autoconfigure" }
 
 # Cloud
 cloud-core = { group = "cloud.commandframework", name = "cloud-core", version.ref = "cloud" }
 cloud-annotations = { group = "cloud.commandframework", name = "cloud-annotations", version.ref = "cloud" }
 
 # Test
-jupiterApi = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "jupiter" }
-jupiterEngine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "jupiter" }
 truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 
 [bundles]
