--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,18 @@
 [plugins]
-spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 spring-plugin-boot = { id = "org.springframework.boot", version.ref = "springBoot" }
 graal-native-buildtools = { id = "org.graalvm.buildtools.native", version.ref = "graal" }
+cloud-buildLogic-spotless = { id = "org.incendo.cloud-build-logic.spotless", version.ref = "cloud-build-logic" }
+cloud-buildLogic-rootProject-publishing = { id = "org.incendo.cloud-build-logic.publishing.root-project", version.ref = "cloud-build-logic" }
+cloud-buildLogic-rootProject-spotless = { id = "org.incendo.cloud-build-logic.spotless.root-project", version.ref = "cloud-build-logic" }
 
 [versions]
+cloud-build-logic = "0.0.1-SNAPSHOT"
 springBoot = "3.2.0"
-spotless = "6.22.0"
 ktlint = "1.0.1"
-indra = "3.1.3"
 checkstyle = "10.12.5"
 kotlin = "1.9.20"
 graal = "0.9.28"
 
-checkerQual = "3.40.0"
-apiguardian = "1.1.2"
 slf4j = "2.0.9"
 cloud = "2.0.0-SNAPSHOT"
 
@@ -24,12 +23,9 @@ truth = "1.1.4"
 awaitility = "4.2.0"
 
 [libraries]
-spotless = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
-indraCommon = { group = "net.kyori", name = "indra-common", version.ref = "indra" }
+cloud-build-logic = { module = "org.incendo:cloud-build-logic", version.ref = "cloud-build-logic" }
 gradleKotlinJvm = { group = "org.jetbrains.kotlin.jvm", name = "org.jetbrains.kotlin.jvm.gradle.plugin", version.ref = "kotlin" }
 
-checkerQual = { group = "org.checkerframework", name = "checker-qual", version.ref = "checkerQual" }
-apiguardian = { group = "org.apiguardian", name = "apiguardian-api", version.ref = "apiguardian" }
 slf4j = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
 awaitility = { group = "org.awaitility", name = "awaitility", version.ref = "awaitility" }
 
