--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
         tags-ignore: [ "**" ]
     pull_request:
     release:
-        types: [ released ]
+        types: [ published ]
 jobs:
     build:
         # Only run on PRs if the source branch is on someone else's repo
@@ -19,13 +19,19 @@ jobs:
               with:
                   distribution: 'temurin'
                   java-version: 17
+            - uses: gradle/gradle-build-action@v2
+              with:
+                  # allow main and *-dev branches to write caches (default is only main/main)
+                  cache-read-only: ${{ github.ref != 'refs/heads/main' && !(endsWith(github.ref, '-dev') && startsWith(github.ref, 'refs/heads/')) }}
             - name: Build
               run: ./gradlew build
-            - name : Test Summary
-              uses : EnricoMi/publish-unit-test-result-action@v2.11.0
-              with :
-                  junit_files : "**/build/test-results/test/TEST-*.xml"
-              if : always()
+            - name: Upload Test Results
+              if: always()
+              uses: actions/upload-artifact@v4
+              with:
+                  name: Test Results
+                  path: |
+                      **/build/test-results/test/TEST-*.xml
             - name: Determine Status
               run: |
                   if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
@@ -34,7 +40,7 @@ jobs:
                     echo "STATUS=release" >> $GITHUB_ENV
                   fi
             - name: Publish Snapshot
-              if: "${{ env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/master' }}"
+              if: "${{ env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/main' }}"
               run: ./gradlew publish
               env:
                   ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
@@ -47,3 +53,14 @@ jobs:
                   ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
                   ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
                   ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
+    event_file:
+        name: "Event File"
+        # Only run on PRs if the source branch is on someone else's repo
+        if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
+        runs-on: ubuntu-latest
+        steps:
+            - name: Upload
+              uses: actions/upload-artifact@v4
+              with:
+                  name: Event File
+                  path: ${{ github.event_path }}
