--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ cloud-buildLogic-rootProject-publishing = { id = "org.incendo.cloud-build-logic.
 cloud-buildLogic-rootProject-spotless = { id = "org.incendo.cloud-build-logic.spotless.root-project", version.ref = "cloud-build-logic" }
 
 [versions]
-cloud-build-logic = "0.0.3"
+cloud-build-logic = "0.0.8-SNAPSHOT"
 springBoot = "3.2.2"
 ktlint = "1.0.1"
 checkstyle = "10.12.5"
