build: update dependencies & gradle wrapper

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,15 @@ jobs:
         runs-on: "ubuntu-latest"
         steps:
             - uses: actions/checkout@v4
-            - uses: gradle/wrapper-validation-action@v1
+            - uses: gradle/actions/wrapper-validation@v3
             - name: Set up JDK
               uses: actions/setup-java@v4
               with:
                   distribution: 'temurin'
-                  java-version: 17
-            - uses: gradle/gradle-build-action@v2
+                  java-version: 21
+            - uses: gradle/actions/setup-gradle@v3
               with:
-                  # allow main and *-dev branches to write caches (default is only main/main)
+                  # allow master and *-dev branches to write caches (default is only master/main)
                   cache-read-only: ${{ github.ref != 'refs/heads/main' && !(endsWith(github.ref, '-dev') && startsWith(github.ref, 'refs/heads/')) }}
             - name: Build
               run: ./gradlew build
