--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
         log-startup-info: false
         banner-mode: off
 
+    shell:
+        interactive:
+          enabled: true
+
 logging:
     level:
         org.incendo: info
