--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,21 +6,21 @@ cloud-buildLogic-rootProject-publishing = { id = "org.incendo.cloud-build-logic.
 cloud-buildLogic-rootProject-spotless = { id = "org.incendo.cloud-build-logic.spotless.root-project", version.ref = "cloud-build-logic" }
 
 [versions]
-cloud-build-logic = "0.0.8-SNAPSHOT"
-springBoot = "3.2.2"
-ktlint = "1.0.1"
-checkstyle = "10.12.5"
-kotlin = "1.9.22"
+cloud-build-logic = "0.0.15"
+springBoot = "3.3.0"
+ktlint = "1.3.0"
+checkstyle = "10.17.0"
+kotlin = "1.9.24"
 graal = "0.9.28"
 
-slf4j = "2.0.12"
-cloud = "2.0.0-beta.1"
+slf4j = "2.0.13"
+cloud = "2.0.0-rc.2"
 
-springShellBom = "3.2.1"
+springShellBom = "3.3.0"
 
 # Test
-truth = "1.4.0"
-awaitility = "4.2.0"
+truth = "1.4.2"
+awaitility = "4.2.1"
 
 [libraries]
 cloud-build-logic = { module = "org.incendo:cloud-build-logic", version.ref = "cloud-build-logic" }
